FDA-302 Fixed modal z-index.

--- a/src/css/components/Nav.styl
+++ b/src/css/components/Nav.styl
@@ -5,7 +5,7 @@
   right: 0px
   bottom: 0px
   background: rgba(0,0,0,0.5)
-  z-index: 1050
+  z-index: 1000050
 
 .modal-container
   position: absolute
